--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
 	"multiplier": 2.3,
-	"games_averaged": 15,
+	"games_averaged": 3,
 	"bet_amount": 1,
+	"auto_stop": 100,
+	"auto_restart": "True",
 	"authorization": ""
 }
