--- a/Tools/config.json
+++ b/Tools/config.json
@@ -1,8 +1,7 @@
 {
-  "minimum_amount": 500,
-  "refresh_rate": 30,
-  "windows_notification": "True",
-  "webhook_enabled": "False",
-  "webhook_ping": "<@1234567890987654>",
-  "webhook": "https://discord.com/api/webhooks/xxxxxxxx/xxxxxxxxxxxxxx"
+	"ping": "<@1234567890>",
+  "webhook": "https://discord.com/api/webhooks/xxxxxxxxxxxx/xxxxxxxxxxxxxxxxxxxxx",
+	"webhook_enabled": true,
+	"notifications_enabled": true,
+	"authorization": ""
 }
