--- a/Tools/requirements.txt
+++ b/Tools/requirements.txt
@@ -1,4 +1,8 @@
-requests
-discord_webhook
-cloudscraper
-win10toast
+termcolor >= 1.1.0
+selenium >= 4.1.3
+selenium-stealth >= 1.0.6
+requests >= 2.27.1
+playsound == 1.2.2
+win10toast >= 0.9
+discord-webhook >= 0.16.3
+cloudscraper >= 1.2.60
