--- a/Tools/config.json
+++ b/Tools/config.json
@@ -1,5 +1,6 @@
 {
 	"minimum_amount": 500,
+	"auto_join": true,
 	"webhook_enabled": true,
 	"webhook": "https://discord.com/api/webhooks/xxxxxxxxxxx/xxxxxxxxxxxxxxxxxxxxx",
 	"webhook_ping": "<@1234567890>",
