--- a/config.json
+++ b/config.json
@@ -1,13 +1,15 @@
 {
-	"multiplier": 2.3,
-	"games_averaged": 15,
-	"bet_amount": 1,
-	"auto_bet": false,
+	"multiplier": 2.5,
+	"game_levels": 2,
+	"mines": 10,
+	"games_averaged": 5,
+	"bet_amount":5,
+	"auto_bet": true,
 	"play_sounds": false,
-	"webhook" : "",
-	"max_betamount": 2048,
-	"auto_stop": 1000,
-	"stop_loss": 30,
+	"webhook": "https://discord.com/api/webhooks/",
+	"max_betamount": 256,
+	"auto_stop": 2000,
+	"stop_loss": 0,
 	"auto_restart": true,
 	"key": "",
 	"authorization": ""
