--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
 	"multiplier": 2.5,
-	"game_levels": 2,
-	"mines": 10,
+	"tower_levels": 2,
 	"games_averaged": 5,
-	"bet_amount":5,
+	"bet_amount":1,
 	"auto_bet": true,
 	"play_sounds": false,
+	"predict_crash": true,
 	"webhook": "https://discord.com/api/webhooks/",
 	"max_betamount": 256,
 	"auto_stop": 2000,
