--- a/config.json
+++ b/config.json
@@ -1,14 +1,16 @@
 {
-	"multiplier": 2.5,
-	"game_levels": 2,
+	"multiplier": 2.3,
+	"game_levels": 25,
 	"mines": 10,
 	"games_averaged": 5,
-	"bet_amount":5,
+	"bet_amount": 1,
 	"auto_bet": true,
+	"martingale": true,
+	"skip_losing_streaks": false,
 	"play_sounds": false,
 	"predict_crash": true,
 	"webhook": "https://discord.com/api/webhooks/",
-	"max_betamount": 256,
+	"max_betamount": 512,
 	"auto_stop": 2000,
 	"stop_loss": 0,
 	"auto_restart": true,
