--- a/Tools/config.json
+++ b/Tools/config.json
@@ -2,7 +2,7 @@
 	"minimum_amount": 500,
 	"auto_join": true,
 	"webhook_enabled": true,
-	"webhook": "",
-	"webhook_ping": "",
+	"webhook": "https://discord.com/api/webhooks/xxxxxxxxxxx/xxxxxxxxxxxxxxxxxxxxx",
+	"webhook_ping": "<@1234567890>",
 	"notifications_enabled": true
 }
